--- a/app/assets/stylesheets/content/_legacy_actions.sass
+++ b/app/assets/stylesheets/content/_legacy_actions.sass
@@ -45,6 +45,7 @@
 
 ul.legacy-actions-main
   @include legacy-actions-defaults
+  margin-left: 20px
 
 ul.legacy-actions-specific,
 .nosidebar ul.legacy-actions-specific
