--- a/app/assets/stylesheets/layout/_toolbar.sass
+++ b/app/assets/stylesheets/layout/_toolbar.sass
@@ -43,6 +43,7 @@
 .toolbar-container
   padding: 0
   margin-bottom: 12px
+  min-height: 50px
 
   > .subtitle
     font-size: rem-calc(14px)
